...
          children: [
            Expanded(
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.start,
                mainAxisSize: MainAxisSize.min,
                children: [
                  const Text('Precio', style: TextStyle(color: AppColors.textoSuave, fontSize: 11)),
                  Text.rich(
                    TextSpan(
                      children: [
                        TextSpan(
                          text: formatoPrecio(producto.precioFinal),
                          style: const TextStyle(color: AppColors.texto, fontSize: 22, fontWeight: FontWeight.w700, letterSpacing: -0.5),
...
